<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tq_distbn_pubsub</name>
  <version>0.0.0</version>
  <description>Compound pubsub node torque distribution</description>
  <maintainer email="sebastian.dick@de.bosch.com">Sebastian Dick</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>tq_distbn_interface</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>tq_distbn_interface</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
